--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       Download CSV
     </button>
     <pre id="status" class="builder-csv-hidden"></pre>
-    <p class="hidden">v4</p>
+    <p class="hidden">v5</p>
 
     <script>
       const API_KEY = "da92e0c53398459689b527346fc360a5";
@@ -60,6 +60,26 @@
       function hideStatus() {
         const status = document.getElementById("status");
         status.classList.add("builder-csv-hidden");
+      }
+
+      function stripHtml(html) {
+        // 1. Remove all tags like <p>, <br/>, <div>, etc.
+        const withoutTags = html.replace(/<[^>]*>/g, "");
+
+        // 2. Replace common HTML entities manually
+        const decoded = withoutTags
+          .replace(/&nbsp;/g, " ")
+          .replace(/&amp;/g, "&")
+          .replace(/&quot;/g, '"')
+          .replace(/&#039;/g, "'")
+          .replace(/&lt;/g, "<")
+          .replace(/&gt;/g, ">")
+          .replace(/&ouml;/g, "ö")
+          .replace(/&auml;/g, "ä")
+          .replace(/&uuml;/g, "ü")
+          .replace(/&szlig;/g, "ß");
+
+        return decoded.trim();
       }
 
       async function getAllBuilderContentUrls(model) {
@@ -120,7 +140,8 @@
               if (model === "materials") {
                 title = item?.data.name;
                 description =
-                  item?.data.shortDescription || item?.data.seoDescription;
+                  stripHtml(item?.data.shortDescription) ||
+                  stripHtml(item?.data.seoDescription);
               } else {
                 title = item?.data.title;
                 description = item.data?.description;
